css/main.css
/* ... */
.listnav ul ul {
    padding-top: 0.2rem; /* increase vertical space between list elem and first subelemnt */
    padding-left: 0.75rem;  /* indent nested list */
}


a.mainpage {
    font-weight: bold;
}

/* agendapunt example */
.card > header > * {
    margin-bottom: 0;
}

.card > header p {
    font-size: 1.125rem;
}

.card {
    border-style: solid;
    border-radius: var(--pico-border-radius);
    border-width: 3px;
    border-color: var(--pico-card-border-color);
    box-shadow: var(--pico-box-shadow);
    background: var(--pico-card-background-color) !important;
    width: 90%;
    margin: var(--pico-block-spacing-vertical) auto;
}

.hoofdagendapunt details {
    margin-left: 30px;
}


/* Landmarks
 */

#header-nav {
    margin-top: 8px;
    grid-area: header;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 2.14em;
    line-height: 1.35;
}

#hamburger-icon {
    width: 25px;
    height: 25px;
}

/* O with logo */

.logo {
    all: unset;
    cursor: pointer;
    font-family: var(--header-font);
}

.o-container {
  position: relative;
  display: inline-flex;
  white-space: nowrap;
  transform: scaleX(1.07); /* Slightly wider "O" */
}

.o-svg {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 1.25em;  /* Adjust size as needed */
  height: 1.25em;
  transform: translate(-8.1%, -9.1%);
  pointer-events: none; /* Ensures text selection works normally */
  user-select: none; /* Prevents SVG from being treated as selectable text */
}

/* only display hamburger mobile on certain viewport sizes  */
#hamburger-menu, #mobile-menu {
    display: none;
}

html.dark-mode {
    color-scheme: dark;
}

html.light-mode {
    color-scheme: light;
}

main {
    grid-area: content;
    min-width: 0; /* important for responsive layout; see pj-dev.com/blog/flex-items-and-min-width-0 */
}

/* dark mode tweaks */
[data-theme="dark"] article {
    background: none;
    box-shadow: none;
}

/* may be relevant wheen js is disabled??? */
#moon, #sun {
    display: none; /* Initially hide both */
}

[data-theme="dark"] #moon {
    display: inline;
}

[data-theme="dark"] #sun {
    display: none;
}

[data-theme="light"] #moon {
    display: none;
}

[data-theme="light"] #sun {
    display: inline;
}

footer {
    grid-area: footer;
    padding-bottom: 20px;
}

/* Syntax highlighting
*/

/* render monospace'd code smaller */
code {
    font-size: 0.86em;
    font-family: CommitMonoVariable;
}

a > code {
    text-decoration: underline;
}



/* for some reason this looks strange at the inline code fontsize */
pre > code {
    font-family: CommitMonoVariable;
    font-size: 1.0em;
}

.chapter {
    opacity: 0.8;
    font-weight: 600;
    font-size: 13px;
    letter-spacing: 0.0625;
    text-transform: uppercase;
}

code {color: var(--pico-color)}
code span.kw { color: var(--pico-ins-color); font-weight: 600; } /* Keyword */
code span.co { color: var(--pico-muted-color)} /* comment */

/* badges used in navbar */
.badge {
    font-weight: bolder;
    font-size: 0.57em;
    border-radius: var(--pico-border-radius);
    background-color: var(--pico-code-kbd-background-color);
    color: var(--pico-code-kbd-color);
    opacity: 0.8;
    margin-top: 0.1em; /* custom alignment */
    padding: 0.08rem 0.23rem !important;
    line-height: 1.25;
    /* margin-right: 0.5em; */
}

nav li li li {
    padding-bottom: 0.30em;
    padding-top: 0.30em;
    margin-left: 0.34em;
    display: flex; /* needed to center the badge with the text */
    align-items: center;
}

nav li li li:last-child {
    padding-bottom: 0.1em;
}

/* Anchor links next to headers */

:is(h1,
h2,
h3,
h4)>a {
    padding-left:calc(var(--pico-spacing) * .5);
    font-weight:400;
    text-decoration:none;
    opacity:0;
    visibility: none;
    transition:color var(--pico-transition) opacity var(--pico-transition);
    user-select: none;
}

:is(h1,
h2,
h3,
h4)>a:focus-visible {
  box-shadow:none;
  color:var(--pico-primary);
  opacity:1
}

:is(h1,
h2,
h3,
h4):hover>a {
  opacity:.25
}

:is(h1,
h2,
h3,
h4):hover>a:hover {
    opacity:.5;
}

:is(h1,
h2,
h3,
h4):hover>a:focus-visible {
    opacity:1;
}

@media (min-width: 576px) {
  .container {
    max-width: 530px;
    padding-right: 0;
    padding-left: 0;
  }
}
@media (min-width: 768px) {
  .container {
    max-width: 728px;
  }
}
@media (min-width: 1024px) {
  .container {
    max-width: 970px;
  }
}
@media (min-width: 1280px) {
  .container {
    max-width: 1220px;
  }
}
@media (min-width: 1536px) {
  .container {
    max-width: 1470px;
  }
}

